# mini-project-loner-edition

./: .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  instructions.txt  readme.md  todo.txt
.github/workflows/: deploy.yml
fatty_acid_salt/: config.toml  pyproject.toml  readme.md
fatty_acid_salt/tests/: test_fatty_acid_salt.py
frontend/: Dockerfile
frontend/src/: angular.json  package-lock.json  package.json
gateway/: config.toml  make_grpc.sh  pyproject.toml  requirements.txt
gateway/proto/in/: student.proto
gateway/proto/outgoing/: student_out.proto  teacher_out.proto
gateway/src/: main.py
gateway/src/clients/grpc/: grpc_client.py  grpc_student.py
gateway/src/clients/rest/: rest_grade.py
gateway/src/clients/soap/: soap_teacher.py
gateway/src/entities/: grade.py  student.py  teacher.py
gateway/src/logic/protogen/in/: student_pb2.py  student_pb2_grpc.py
gateway/src/logic/protogen/incoming/: student_pb2.py  student_pb2_grpc.py
gateway/src/logic/protogen/outgoing/: grade_out_pb2.py  grade_out_pb2_grpc.py  student_out_pb2.py  student_out_pb2_grpc.py  teacher_out_pb2.py  teacher_out_pb2_grpc.py
gateway/src/server/: grpc_server.py
gateway/src/server/servicers/: grade_servicer.py  student_servicer.py  teacher_servicer.py
gateway/src/utils/: config.py  run_codegen.py
gateway/src/utils/in/student/: student_pb2.py  student_pb2_grpc.py
grpc/: Cargo.toml  Dockerfile  build.rs  config.toml  dockerfile
grpc/proto/student/: student.proto
grpc/src/: client.rs  entities.rs  server.rs
grpc/src/connection/: mod.rs  pg_connection.rs
grpc/src/entities/: student.rs
grpc/src/logic/: mod.rs  student_handler.rs
grpc/src/utils/: config.rs
migration/: Dockerfile  config.toml  dockerfile  pyproject.toml  requirements.txt
migration/migrations/grades/: down.sql  up.sql
migration/migrations/grades_students/: down.sql  up.sql
migration/migrations/grades_teachers/: down.sql  up.sql
migration/migrations/students/: down.sql  up.sql
migration/migrations/teachers/: down.sql  up.sql
migration/src/: main.py
migration/src/connection/: pg_connection.py
migration/src/entities/: entity_abstract.py  grade.py  grade_student.py  grade_teacher.py  student.py  teacher.py
migration/src/logic/: pg_data_pop.py  pg_exec.py  pg_table_exec.py
migration/src/utils/: aliases.py  config.py  query_utils.py
proxy/: envoy.yaml
rest/: Dockerfile  config.toml  deps.ts  dockerfile  readme.md
rest/src/: main.ts  (+1 more)
soap/: Dockerfile  SoapService.sln  Startup.cs
teacher_rest/: Dockerfile  teacher_rest.sln
(+59 files in other folders)
