[tool.poetry]
name = "fatty_acid_salt"
version = "0.1.0"
description = ""
authors = ["= <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nose2 = "^0.10.0"
zeep = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
