[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.40.0"
grpcio-tools = "^1.40.0"
toml = "^0.10.2"
nose2 = "^0.10.0"
zeep = "^4.1.0"
requests = "^2.26.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
