[tool.poetry]
name = "migration"
version = "0.1.0"
description = ""
authors = ["apatheticfrog <apathetic_frog@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Cython = "^0.29.24"
psycopg2 = "^2.9.1"
nose2 = "^0.10.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
